fixed scrollbars and textarea overflow

--- a/src/modules/editor/components/ReactMarkdownEditor/styles.module.scss
+++ b/src/modules/editor/components/ReactMarkdownEditor/styles.module.scss
@@ -4,6 +4,10 @@
   padding: 0;
   background: transparent;
   color: inherit;
-  border: none;
+  border-width: 0px !important;
+  outline: none;
   box-sizing: border-box;
+  resize: none;
+  vertical-align: bottom;
+  margin: 0;
 }
