--- a/src/modules/editor/containers/MarkdownEditorContainer/styles.module.scss
+++ b/src/modules/editor/containers/MarkdownEditorContainer/styles.module.scss
@@ -1,5 +1,5 @@
 .editor {
   height: 100%;
-  overflow: scroll;
+  overflow: auto;
   box-sizing: border-box;
 }
