--- a/src/styles/_dark.scss
+++ b/src/styles/_dark.scss
@@ -1,6 +1,6 @@
 :root {
-  --color-border: #333333;
-  --color-background: #111111;
+  --color-border: #444444;
+  --color-background: #2e2e2e;
   --color-text: #ffffff;
   --color-link: #25bfe6;
   --color-code-text: #ff3344;
